<resources>
    <string name="app_name">Task list</string>
    <string name="status_created">Created</string>
    <string name="status_in_process">In process</string>
    <string name="status_completed">Completed</string>
    <string name="task_editor">Task editor</string>
    <string name="task_name">Task name</string>
    <string name="task_description">Task description</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="create_pin">Create PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="repeat_pin">Repeat PIN</string>
    <string name="search_hint">Search for tasks</string>
    <string name="tasks_not_found">Tasks not found</string>
    <string name="create_task">Create task</string>
    <string name="all">All</string>
</resources>