<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/record_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:maxLines="2"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/record_delete_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Как я пытался научить кота играть на гитаре" />

        <ImageButton
            android:id="@+id/record_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_delete_forever_24"
            app:layout_constraintBottom_toBottomOf="@id/record_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/record_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/record_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/record_title"
            tools:text="Сегодня я решил, что мой кот Мурзик должен развиваться творчески. В интернете я наткнулся на видео, где коты играют на музыкальных инструментах, и это вдохновило меня. Я достал свою старую гитару, настроил ее и сел на пол, чтобы показать Мурзику, как это делается. Первое, что он сделал — это уткнулся в струны и начал их царапать. Я подумал, что это его способ сказать: «Давай, покажи мне, как!». " />

        <TextView
            android:id="@+id/record_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/record_content"
            tools:text="10.11.2024" />

        <!-- Трехсостояльный переключатель -->
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/task_status_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/record_date"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/status_created"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_created"
                app:checkedIcon="@drawable/baseline_check_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/status_in_progress"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_in_process"
                app:checkedIcon="@drawable/baseline_check_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/status_done"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_completed"
                app:checkedIcon="@drawable/baseline_check_24" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
